--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,11 @@
             </div>
             <button type="submit">Sortear número</button>
         </form>
+        <div class="resultado">
+            O numero sorteado foi: <span id="resultado-valor"></span>
+        </div>
     </main>
+
     <script src="@@ENDERECO_DO_JS"></script>
 </body>
 </html>
